Bug 365753 - search results are not updated in the search folder (Last Search)
Summary: search results are not updated in the search folder (Last Search)
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: search (other bugs)
Version First Reported In: 5.2.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 377499 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-07-16 20:14 UTC by Ákos Szederjei
Modified: 2017-04-08 10:44 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ákos Szederjei 2016-07-16 20:14:34 UTC
Live search folder is not updated with the new search results

Reproducible: Always

Steps to Reproduce:
1. Make a search (with any word(s))
2. Live Search Folder contains results
2. Make another search for another word(s)
3. Live Search Folder is not updated with new search results (the last search results are displayed)

Actual Results:  
no new search results

Expected Results:  
updated search results

Discussions here: https://forum.kde.org/viewtopic.php?f=215&t=133715&p=359497#p359497

Hardver is a HP 6735b notebook
Using KaOS (2016) Linux 
KMail version 5.2.2
KDE Frameworks 5.24.0
QT 5.7.0
Comment 1 Bertrand Croq 2016-12-07 15:29:58 UTC
I confirm: I get this bug too.

ArchLinux
KMail 5.3.3
KDE Frameworks 5.28.0
Qt 5.7.0
Comment 2 Björn Wolf 2017-01-12 07:55:42 UTC
I get this bug, too.

Kubuntu 14.04 LTS
KMail 4.13.3
KDE Platform Version 4.13.3

I did some Re-Indexing according to https://forum.kde.org/viewtopic.php?f=154&t=120988 but this did not help
Comment 3 Björn Wolf 2017-01-12 08:08:06 UTC
Update:

If repeating the search for the same words, there will be results. However, the results are restricted to E-Mails older that 11 May 2015.

Strangely, this date is the same (11/05/2015) for all words to be searched for.
Comment 4 Martin Steigerwald 2017-01-12 08:47:15 UTC
Björn, KDEPIM 4 and Akonadi 1 is not supported by upstream anymore. Of course I am leaving this bug open, as its against a newer version, but there will not be any fix for KDEPIM 4 from upstream anymore. Please be aware of that. Also please, if you want to diagnose this issue further, please do so with a newer version.
Comment 5 alessandro.marca 2017-04-04 12:38:59 UTC
I confirm: I get this bug too.

Mint18.1 + neon repo
KMail 5.4.3
KDE Frameworks 5.32.0
Qt 5.7.1

Corresponding collection in mysql db has still the same "queryString" field value.
Empty queryString value does nothing.
Delete collection in DB or research in Kmail let search work again.
Comment 6 Daniel Vrátil 2017-04-08 10:40:24 UTC
*** Bug 377499 has been marked as a duplicate of this bug. ***
Comment 7 Daniel Vrátil 2017-04-08 10:44:15 UTC
Git commit e32bdeca4e9d9d84175d2aecb68c7f333f4ad31c by Daniel Vrátil.
Committed on 08/04/2017 at 10:42.
Pushed by dvratil into branch 'Applications/17.04'.

Update search query from CollectionModifyJob

The Search query is in PersistentSearchAttribute, but the server
cannot inspect that. The Protocol already has properties to send
the search query as part of ModifyCollectionCommand, so let's
use that.
FIXED-IN: 5.5.0

M  +7    -0    src/core/jobs/collectionmodifyjob.cpp

https://commits.kde.org/akonadi/e32bdeca4e9d9d84175d2aecb68c7f333f4ad31c