Update search query from CollectionModifyJob

The Search query is in PersistentSearchAttribute, but the server
cannot inspect that. The Protocol already has properties to send
the search query as part of ModifyCollectionCommand, so let's
use that.

BUG: 365753
FIXED-IN: 5.5.0